# iso2dcat

./: .secrets.yaml  pyproject.toml  settings.yaml
SOLR_CONFIG/conf/: managed-schema  managed-schema~  schema.xml.bak  solrconfig.xml  solrconfig.xml~
docs/: datenadler_SHACL_validation.eddx  datenadler_components.vsdx  datenadler_harvesting.eddx  datenadler_komponenten.eddx  datenadler_systemcontext.eddx  datenadler_systemcontext.vsdx  datenadler_transfer.eddx  datenadler_tripel_store.eddx  iso2dcat_uml.eddx  solr_uml.eddx
iso2dcat/: __init__.py  config.py  csw.py  dcat.py  dcat_fields.txt  dcm.py  error.py  exceptions.py  format_mapper.py  iso2dcat.xsl  license_mapper.py  main.py  meta_data_database.py  namespace.py  path_utils.py  rdf_validation.py  thesauri_mapper.py  utils.py
iso2dcat/component/: interface.py
iso2dcat/data/: filetypes-skos.rdf  language_mapper.pickle  theme.de.rdf
iso2dcat/entities/: base.py  catalog.py  categories.py  contactpoint.py  dataservice.py  dataset.py  dates.py  distribution.py  foafdocuments.py  hierarchy.py  languagemapper.py  licenses.py  locationboundingbox.py  periodicity.py  priority.py  provenance.py  publisher.py  resource.py  rightstatement.py  service.py  tile.py
iso2dcat/log/: log.py
iso2dcat/rdf_database/: db.py
iso2dcat/solr/: data.py  managed-schema  rdf2solr.py
iso2dcat/statistics/: stat.py
tests/: base.py  test_base.py  test_bounding_box.py  test_catalog.py  test_categories.py  test_contact_point.py  test_csw.py  test_dataservice.py  test_dataset.py  test_foaf_document.py  test_format_mapper.py  test_iso2dcat.py  test_languagemapper.py  test_license_mapper.py  test_main.py  test_stat.py  test_tiles.py  test_utils.py
tests/testdata/: 0a2c35a5-81b9-4ecd-a223-d40592c0ba12.xml  0b240f09-a9e5-4bc1-9351-c2a9a9b2cfab.xml  4263d50f-2ede-454c-a1c8-d5bf3f095418.xml  724acaf6-670f-4f1d-ac1c-fbadd3f9e93e.xml  80543203-185e-4d17-8454-2a98bd405182.xml  8ce339ec-c60b-4c26-a790-20f75756e255.xml  bad.xml  dcm.json
